--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-  <title>Pesan Dariku Untukmu &#128157</title>
+  <title>Dear For Oktavianza Ramadhany</title>
   <style>
     @import url(https://fonts.googleapis.com/css?family=Ubuntu);
     @import url(https://fonts.googleapis.com/css?family=Handlee);
@@ -83,11 +82,9 @@
       0% {
         transform: scale(1.03);
       }
-
       50% {
         transform: scale(1);
       }
-
       100% {
         transform: scale(1.03);
       }
@@ -97,11 +94,9 @@
       0% {
         transform: translateY(0);
       }
-
       50% {
         transform: translateY(5px);
       }
-
       100% {
         transform: translateY(0);
       }
@@ -117,6 +112,7 @@
       display: none;
       justify-content: center;
       align-items: center;
+      flex-direction: column;
     }
 
     .content2 .wa {
@@ -127,7 +123,7 @@
     .content2 .wa button {
       background-image: linear-gradient(to top left, #ff009d, #ff004c);
       padding: 7px 20px;
-      margin: 50px auto;
+      margin: 20px auto;
       border-radius: 10px;
       font-size: 1.1rem;
       font-weight: 600;
@@ -143,7 +139,6 @@
       min-width: 360px;
       height: 480px;
       margin: 0 auto;
-      margin-top: 60px;
       background: #fafafa;
       border-radius: 10px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -165,21 +160,19 @@
 
     .paper-content {
       position: absolute;
-      top: 30px;
+      top: 0;
       right: 0;
-      bottom: 30px;
+      bottom: 0;
       left: 40px;
       background: linear-gradient(transparent, transparent 28px, #91d1d3 28px);
       background-size: 30px 30px;
+      padding: 30px 10px;
     }
 
     .paper-content textarea {
       width: 100%;
-      max-width: 100%;
       height: 100%;
-      max-height: 100%;
       line-height: 30px;
-      padding: 0 10px;
       border: 0;
       outline: 0;
       background: transparent;
@@ -188,7 +181,7 @@
       font-weight: bold;
       font-size: 17px;
       box-sizing: border-box;
-      z-index: 1;
+      resize: none;
     }
   </style>
 </head>
@@ -224,7 +217,7 @@
   <script>
     var musik = "Musik satu.mp3";
     var background = "Foto satu.jpg";
-    var ucapanSurat = `Dear Istriku/Oktavianza Ramadhany, halloo sayang, good morning manusiaa istimewa cintaku sayangku sumber kebahagiaankuu, kamu masii sakit yaa pacar aku? cepet sembuh yaa sayang. plss jaga kesehatan kamu sayang, aku gamau liat kamu sakit terus sayang. kurangin bergadangnya sayang? jangan ngelakuin hal hal yang negatif yah sayang, nanti kalo kamu sakit terus aku sama siapa sayang? aku mau ditemenin kamu terus sayang, jangan pergii ya sayang? aku gamau kehilangan orang yang aku sayang, aku mau terus sama kamu sayang, aku mohon banget ini sayang. kamu baik baik yaa sayang, jangan sakit sakit terus sayang, kasian liat kamu lho sayang. kamu harus banyakin istirahat biar bisa sembuh & bisa ngelakuin aktifitas kaya biasa yahhh sayangkuu. makan nya yang teratur yaa sayang, jangan jajan sembarangan sayang. aku disini buat kamu sayang, aku selalu doakan kamu supaya kamu cepet sembuh sayangku. kalo kamu ada apa apaa sayangku, kamu kabarin aku yaa? jangan suka mendem masalah sendirian sayang. get well soon sayang, i lovee y moree istriku good morning sayang, I love you my universe sayang❤‍🔥❤‍🔥❤‍🔥🤍🤍🤍`;
+    var ucapanSurat = `Dear Istriku/Oktavianza Ramadhany, halloo sayang, good morning manusiaa istimewa cintaku sayangku sumber kebahagiaankuu, kamu masii sakit yaa pacar aku? cepet sembuh yaa sayang. plss jaga kesehatan kamu sayang, aku gamau liat kamu sakit terus sayang. kurangin bergadangnya sayang? jangan ngelakuin hal hal yang negatif yah sayang, nanti kalo kamu sakit terus aku sama siapa sayang? aku mau ditemenin kamu terus sayang, jangan pergii ya sayang? aku gamau kehilangan orang yang aku sayang, aku mau terus sama kamu sayang, aku mohon banget ini sayang. jangan sakit sakit terus sayang, kasian liat kamu lho sayang. kamu harus banyakin istirahat biar bisa sembuh & bisa ngelakuin aktifitas kaya biasa yahhh sayangkuu. makan nya yang teratur yaa sayang, jangan jajan sembarangan sayang. aku disini buat kamu sayang, aku selalu doakan kamu supaya kamu cepet sembuh sayangku. kalo kamu ada apa apaa sayangku, kamu kabarin aku yaa? jangan suka mendem masalah sendirian sayang. get well soon sayang, i lovee y moree istriku good morning sayang, I love you my universe sayang❤‍🔥❤‍🔥❤‍🔥🤍🤍🤍`;
     var pesanWhatsapp = "Bisa aja kamu🤭";
 
     var audio = document.querySelector(".audio");
@@ -268,5 +261,4 @@
     }
   </script>
 </body>
-
 </html>
